log_output/manifests/deployment.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercises
  name: log-output-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output-app
  template:
    metadata:
      labels:
        app: log-output-app
    spec:
      volumes:
        - name: shared-files
          configMap:
            name: log-output-configmap
      containers:
        - name: log-output-container
          image: twodogwalker/log-output:0.28
          imagePullPolicy: IfNotPresent
          volumeMounts:          
          - name: shared-files
            mountPath: /usr/src/app/shared
        - name: ping-pong-container
          image: twodogwalker/ping-pong-app:0.18
          imagePullPolicy: IfNotPresent
