log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: log-output-app-service
spec:
  type: NodePort
  selector:
    app: log-output-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 5000
