log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: exercises
  name: log-output-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: log-output-app-service
                port:
                  number: 80
          - path: /log
            pathType: Prefix
            backend:
              service:
                name: log-output-app-service
                port:
                  number: 80
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-app-service
                port:
                  number: 80
          - path: /pings
            pathType: Prefix
            backend:
              service:
                name: ping-pong-app-service
                port:
                  number: 80
